# Mail-Agent

./: .env.example  .gitignore  LICENSE  Readme.md  alembic.ini  apply_migration.py  c.xml  docker-compose.yml  jest.config.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh  tsconfig.json
.cursoragent/: debug_log.md  debug_status.md  development.md  features.md  p.tackel.md  service_flow.md  task_log.md
.cursoragent/development/: DEVELOPMENT.md  architecture.md  service_flow.md
.cursoragent/tasker/: 1.md  2.md  agent_api_implementation.md  app_fixes.md  app_fixes_v2.md  database_init.md  features.md  implementation_plan.md  monitoring_implementation.md  p.tackel.md  remaining_tasks.md  visualization_implementation.md
.github/: CODEOWNERS  deployment-config.yml
.github/workflows/: ci.yml  dependency-updates.yml  deploy.yml  security.yml  test.yml
a.old.tech.stack/: .env.example  .flaskenv  .gitignore  CONTRIBUTING.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.sh
a.old.tech.stack/.streamlit/: config.toml
a.old.tech.stack/docker/: backend.Dockerfile  frontend.Dockerfile
a.old.tech.stack/docker/api/: Dockerfile
a.old.tech.stack/docker/dashboard/: Dockerfile
a.old.tech.stack/src/: config.py  run.py
a.old.tech.stack/src/api/: app.py  main.py
a.old.tech.stack/src/config/: config.py  settings.py
a.old.tech.stack/src/dashboard/: email_monitor.py  run_dashboard.py  streamlit_logger.py  test_flow.py  test_section.py
a.old.tech.stack/src/dashboard/services/: monitoring.py
a.old.tech.stack/src/database/: alembic.ini  base.py  database_config.py  migrations.py  models.py  setup_database.py
a.old.tech.stack/src/database/alembic/: env.py
a.old.tech.stack/src/database/alembic/versions/: initial_migration.py
a.old.tech.stack/src/database/migrations/: env.py
a.old.tech.stack/src/email/services/: admin_service.py  ai_service.py  email_processor.py  email_service.py
a.old.tech.stack/src/utils/: event_loop.py  port_utils.py  project_setup.py
alembic/: env.py
backend/: .env.example  alembic.ini  create_migration.py  package-lock.json  package.json  pytest.ini  requirements.txt  run_tests.sh  tsconfig.json
backend/alembic/: env.py
backend/migrations/: env.py
backend/src/: config.ts  index.ts  main.py
backend/tests/: conftest.py  test_users.py
dashboard/: package-lock.json  package.json  tsconfig.json
dashboard/public/: index.html  manifest.json
dashboard/src/: App.tsx  index.tsx
docker/: docker-compose.yml
docker/prometheus/: prometheus.yml
docs/: PROJECT_STATUS.md
docs/dev/: dev.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx  index.css  theme.ts
migrations/: env.py
migrations/versions/: a9734e9fe9a7_initial_migration.py
server/: package-lock.json  package.json  tsconfig.json
server/src/: server.ts
src/: app.ts  index.ts  index.tsx  main.py  run.py
src/api/: app.py  application.py  dependencies.py  deps.py  events.py
src/config/: config.py  database.config.ts  email.config.ts  llm.config.ts  server.config.ts
src/controllers/: AIController.ts  agent.controller.ts  ai.controller.ts  auth.controller.ts  email.controller.ts  monitor.controller.ts  visualization.controller.ts
src/core/: auth.py  config.py  events.py  exceptions.py  logging.py  metrics.py  security.py
src/dashboard/: email_monitor.py  email_monitor.py.bak  test_flow.py  test_section.py
src/database/: alembic.ini  base.py  connection.ts  database_config.py  session.py  setup_database.py
src/db/: base.py  init_db.py  redis.py  session.py
src/docs/: swagger.yaml
src/middleware/: index.ts  logging.py  metrics.py  rate_limit.py  session.py  validate-request.ts
src/migrations/: 1710000000000-CreateInitialTables.ts
src/models/: __init__.py  ai.py  attachment.py  (+5 more)
tests/: conftest.py  utils.py
(+303 files in other folders)
