[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimail"
version = "0.1.0"
description = "AI-powered email assistant"
authors = [
    {name = "Parth Patel", email = "ai@deployx.in"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "aiosmtplib>=1.1.6",
    "fastapi-mail>=1.2.0",
    "jinja2>=3.0.0",
    "bs4>=0.0.1",
    "openai>=0.27.0",
    "aiohttp>=3.8.0",
    "streamlit>=1.22.0",
    "plotly>=5.13.0",
    "pandas>=1.5.0",
    "networkx>=3.0",
    "numpy>=1.23.0",
    "psutil>=5.9.0",
    "celery>=5.2.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.9.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.23.0",
    "black>=22.3.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "pylint>=2.15.0"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "src/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto" 